[workspace]
members = ["server", "lib", "client", "hook"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.72"
env_logger = "0.11"
log = "0.4.17"
tokio = { version = "1.31.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.14"
futures = "0.3.29"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
