[package]
name = "buhao_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
env_logger = "0.9"
log = "0.4.17"
buhao_lib = { path = "../lib" }
tokio = { version = "1.31.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.29"
serde_json = "1.0.108"

[dev-dependencies]
test-log = "0.2.11"
env_logger = "0.9"
ctor = "0.2.4"
