[package]
name = "hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ctor = "0.2.5"
env_logger = { workspace = true }
libc = "0.2.150"
log = { workspace = true }
redhook = { git = "https://github.com/taoky/redhook.git", rev = "b8ac9e826ab43ea30495cae255103166762e0493" }
buhao_lib = { path = "../lib" }
serde_json = { workspace = true }
path-clean = "1.0.1"

[lib]
name = "buhao_hook"
crate_type = ["cdylib"]
