[package]
name = "buhao_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
test-log = "0.2.11"
env_logger = "0.9"
ctor = "0.2.4"
