[package]
name = "buhao_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
buhao_lib = { path = "../lib" }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }

[dev-dependencies]
test-log = "0.2.11"
ctor = "0.2.4"
